--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Single Price Grid Component</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main>
+      <section class="grid">
+        <div class="join">
+          <h1>Join our community</h1>
+          <h2>30-day, hassle-free money back guarantee</h2>
+          <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+        </div>
+        <div class="sub">
+          <h2>Monthly Subscription</h2>
+          <div class="monthly">
+            <h2 class="price">$29</h2>
+            <p>Per month</p>
+          </div>
+          <p>Full access for less than $1 a day</p>
+        </div>
+        <div class="why">
+          <h2>Why Us</h2>
+          <ul>
+            <li>Tutorials by industry experts</li>
+            <li>Peer & expert code review</li>
+            <li>Coding exercises</li>
+            <li>Access to our GitHub repos</li>
+            <li>Community forum</li>
+            <li>Flashcard decks</li>
+            <li>Ne videos every week</li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
