--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Access to our GitHub repos</li>
             <li>Community forum</li>
             <li>Flashcard decks</li>
-            <li>Ne videos every week</li>
+            <li>New videos every week</li>
           </ul>
         </div>
       </section>
