--- a/index.html
+++ b/index.html
@@ -14,15 +14,22 @@
         <div class="join">
           <h1>Join our community</h1>
           <h2>30-day, hassle-free money back guarantee</h2>
-          <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+          <p>
+            Gain access to our full library of tutorials along with expert code
+            reviews. Perfect for any developers who are serious about honing
+            their skills.
+          </p>
         </div>
         <div class="sub">
-          <h2>Monthly Subscription</h2>
-          <div class="monthly">
-            <h2 class="price">$29</h2>
-            <p>Per month</p>
+          <div>
+            <h2>Monthly Subscription</h2>
+            <div class="monthly">
+              <h2 class="price">$29</h2>
+              <p>Per month</p>
+            </div>
+            <p>Full access for less than $1 a day</p>
           </div>
-          <p>Full access for less than $1 a day</p>
+          <a href="#" class="btn">Sign Up</a>
         </div>
         <div class="why">
           <h2>Why Us</h2>
